# modus

./: Cargo.toml  LICENSE  README.md  index.html
doc/: help.html  src-files.js
doc/modus/: all.html  index.html  sidebar-items.js
doc/modus/options/: fn.bs_price.html  fn.expected.html  fn.kelly_ratio.html  index.html  struct.Options.html
doc/modus/stock_returns/: derive.From.html  enum.StocksError.html  fn.total_returns.html  index.html  sidebar-items.js  struct.Portfolio.html
doc/src/modus/: lib.rs.html  stock_returns.rs.html  yahoo_finance.rs.html
doc/trait.impl/core/clone/: trait.Clone.js
doc/trait.impl/core/convert/: trait.From.js
doc/trait.impl/core/marker/: trait.Copy.js  trait.Freeze.js
doc/trait.impl/core/panic/unwind_safe/: trait.RefUnwindSafe.js
doc/trait.impl/serde/de/: trait.Deserialize.js
modus-derive/: Cargo.toml
modus-derive/src/: lib.rs
src/: lib.rs  main.rs  options.rs  stock_returns.rs  yahoo_finance.rs
