[package]
name = "modus"
version = "0.1.2"
edition = "2021"

[dependencies]
actix-web = "4"
time = "0.3.36"
serde = { version = "1.0.200", features = ["derive"] }
chrono = "0.4.38"
rstat = "0.6.0"
serde_json = "1.0.116"
rand = "0.7.3"
modus-derive = { path = "modus-derive"}
reqwest = "0.12.4"
thiserror = "1.0.60"
